<resources>
    <string name="app_name">LKWB</string>
    <string name="banner_ad_unit_id">ca-app-pub-4698367235216604~1374255219</string>
    <string name="banner_ad_id">ca-app-pub-4698367235216604/6678552782</string>
    <string name="banner_inter_id">ca-app-pub-4698367235216604/9453889356</string>
    <string name="facebook_app_id">1341775266585111</string>
    <string name="fb_login_protocol_scheme">fb1341775266585111</string>
    <string name="facebook_client_token">4d443d9759353192b1ee2c3c49a5c1c2</string>
    <string name="home">Dashboard</string>
    <string name="ubt_test">LKWB UBT Test</string>
    <string name="dictionary">LKWB Dictionary</string>
    <string name="grammar">LKWB Grammar</string>
    <string name="blog">LKWB Blog</string>
    <string name="dictionarys">Dictionary</string>
    <string name="grammars">Grammar</string>
    <string name="blogs">Blog</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait</string>
    <string name="time_out">Time Out</string>
    <string name="request_failed">Request failed</string>
    <string name="no_internet">No Internet connection</string>
    <string name="enter_password">The password must be at least 6 characters.</string>
    <string name="enter_full_name">Please enter your full name.</string>
    <string name="enter_email_address">Please enter valid email address.</string>
    <string name="enter_valid_email_address">Please enter valid email address.</string>
    <string name="login_failed">Login Failed</string>
    <string name="logout_failed">Logged Out Failed</string>
    <string name="login_success">Login Successful</string>
    <string name="password_mismatch">Password does not match</string>
    <string name="password_6_character">Password must be at least 6 characters</string>
    <string name="opt_error">Verification code must be 4 digits</string>
    <string name="sample_name">Birendra Bohara</string>
    <string name="sample_email">Boharasbl43@gmail.com</string>
    <string name="sample_package_name">Set-207-A Test</string>
    <string name="sample_package_detail">Set 214-A EPS-TOPIK UBT Exam *1 units</string>
    <string name="sample_price">Price: 100</string>
    <string name="sample_set_count">Sets: 2</string>
    <string name="sample_set_name">Set-218-D Test</string>
    <string name="sample_new_price">Price: Rs. </string>
    <string name="sample_ubt_test_title">TOPIK I - Reading - Mock Test</string>
    <string name="sample_discover_title">(이)랍니다</string>
    <string name="sample_discover_subtitle">This is an abbreviation of -(이)늘의 문. This form is used for indirect discourse by simply quoting what has been said...</string>
    <string name="sample_blog_title1">Explanation about Korea</string>
    <string name="sample_blog_title2">Explanation about Korea Festival</string>
    <string name="sample_blog_time">Jan 12, 8 min read</string>
    <string name="sample_blog_detail">It was the first day of my design internship. I started my day by attending the briefing done by the design team. Then, afterwards we all got in with some sketching as it was a part of daily design exercise.  I was given a task to design lo-fi wifreframes, therefore I started drawing my ideas out on paper the moved on to figma, a fully-funtioning design tool.</string>
    <string name="other_related_blogs">Other Related Blogs</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments</string>
    <string name="commen">comment</string>
    <string name="test_score">UBT Last Test Summary</string>
    <string name="last_scored">Last Scored</string>
    <string name="your_last_test_score">Your Last Test Score</string>
    <string name="score">Avg. Score</string>
    <string name="reward_points">Reward Points</string>
    <string name="score_per">50%</string>
    <string name="score_tot">out of 40</string>
    <string name="our_services">Our Services</string>
    <string name="discussion">LKWB Discussion</string>
    <string name="most_purchase_sets">Most Purchased Sets</string>
    <string name="view_all">View All</string>
    <string name="new_test">New LKWB UBT Test Sets</string>
    <string name="all_sets">All Sets</string>
    <string name="purchased_sets">Purchased Sets</string>
    <string name="packag">Package</string>
    <string name="packages">Packages</string>
    <string name="platinum">Platinum</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="sets">Sets</string>
    <string name="buy_package">Buy Package</string>
    <string name="topik_1">TOPIK 1 - Reading - Mock Test</string>
    <string name="buy_a_premium">Buy a Premium Package</string>
    <string name="ten_sets">10 sets, Price only 800</string>
    <string name="sets_one">Sets 1</string>
    <string name="test_now">Test Now</string>
    <string name="claim_now">Claim Now</string>
    <string name="price_rs">Rs. </string>
    <string name="grammar_of_day">Grammar of the Day</string>
    <string name="sample_korean">의미</string>
    <string name="english_meaning">English Meaning:</string>
    <string name="sample_translation">The Korean Grammar point "E" is used after a subject and object nouns, to show the listing or subjects and objects or an addition of a subject or object to one mentioned previously</string>
    <string name="eps_topik_grammar">EPS TOPIK Grammar</string>
    <string name="beginner_grammar">Beginner Grammar</string>
    <string name="search">Search</string>
    <string name="read_more">Read More</string>
    <string name="word_of_day">Word of the Day</string>
    <string name="search_word">Search word and find it\'s meaning and examples.</string>
    <string name="search_grammar">Search grammar and find it\'s meaning ,rules and examples.</string>
    <string name="search_discussion">Search discussion and find it\'s comments and replies.</string>
    <string name="words_to_discover">Words To Discover</string>
    <string name="nepali_to_korean">Nepali To Korean</string>
    <string name="korean_to_english">Korean To English</string>
    <string name="korean_to_nepali">Korean To Nepali</string>
    <string name="english_to_korean">English To Korean</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="word_title">가계부</string>
    <string name="nepali">네팔어</string>
    <string name="nepali_trans">घरेलू खाता</string>
    <string name="english_trans">household ledger[account book]</string>
    <string name="example">Examples</string>
    <string name="related_words">Other Grammar</string>
    <string name="word_example">가계부를 기록하다.
खातामा रेकर्ड राख्नु।</string>
    <string name="na">N/A</string>
    <string name="grammar_title"></string>
    <string name="meaning">Meaning</string>
    <string name="rules">Rules</string>
    <string name="about_us">About Us</string>
    <string name="services">Services</string>
    <string name="useful_links">USEFUL LINKS</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact Us</string>
    <string name="guide">Guide</string>
    <string name="word_card">Word Card</string>
    <string name="logout">Logout</string>
    <string name="question_no">Question No.  </string>
    <string name="sample_time">44:49</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="submit_now">Submit Now</string>
    <string name="all_results">All Results</string>
    <string name="result">Result</string>
    <string name="listening_result">Listening Result </string>
    <string name="reading_result">Reading Result </string>
    <string name="twenty_questions"> (20 Questions)</string>
    <string name="wrong_answer">Incorrect Answer</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="unsolved_question">Unattempted Question</string>
    <string name="all_questions">All Questions</string>
    <string name="listening">Listening  (%1$s Questions)</string>
    <string name="reading">Reading  (%1$s Questions)</string>
    <string name="attempted_question">Attempted Question</string>
    <string name="attempted_questions">Attempted Questions</string>
    <string name="unattempted_questions">Unattempted Questions</string>
    <string name="attempted_break_questions">Attempted \n Questions</string>
    <string name="unsolved_break_questions">Unattempted \n Questions</string>
    <string name="correct_break_answers">Correct \n Answers</string>
    <string name="scored_break_marks">Scored \n Marks</string>
    <string name="obtained_break_marks">Obtained \n Marks</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_mail">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or_login_with">Or Login with</string>
    <string name="or_sign_up_with">Or Sign up with</string>
    <string name="dont_have_an_account">Don\'t have an account ?  </string>
    <string name="register_now"> Register Now</string>
    <string name="register_new_user">Register New User</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="already_have_an_account">Already Have an Account? </string>
    <string name="dont_worry">Don\'t worry! It occurs. Please enter the email address linked with your account.</string>
    <string name="send_code">Send Code</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_verification">Enter the verification code we just sent on your email address.</string>
    <string name="verify">Verify</string>
    <string name="didnt_received_code">Didn\'t received code? </string>
    <string name="resend"> Resend</string>
    <string name="create_new_password">Create new password</string>
    <string name="your_new_password">Your new password must be unique from those previously used.</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="password_changed">Password Changed!</string>
    <string name="your_password_changed">Your password has been changed successfully.</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="your_free_test_package">Your free test package has been added to your account.</string>
    <string name="invoice_no">Invoice No: </string>
    <string name="purchased_date">Purchased Date: </string>
    <string name="purchase_name">Purchase Name: </string>
    <string name="payment_method">Payment Method: </string>
    <string name="total_amount">Total Amount: </string>
    <string name="test">Test</string>
    <string name="units">Units</string>
    <string name="done">Done</string>
    <string name="this_test_includes">This test includes</string>
    <string name="questions">Questions:</string>
    <string name="time">Time:</string>
    <string name="reading_questions">Reading Questions</string>
    <string name="listening_questions">Listening Questions</string>
    <string name="minutes">Minutes</string>
    <string name="marks">Marks:</string>
    <string name="full_marks">Full Marks:</string>
    <string name="pass_marks">Pass Marks:</string>
    <string name="you_can_leave">Note: You can leave the test at any time but you can not skip any questions. Attempt all the Questions.</string>
    <string name="begin">Begin</string>
</resources>