<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="30dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/payment_successful"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/text_color_green"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="@string/your_free_test_package" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_invoice_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invoice_no" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3px"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/text_color" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_purchased_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purchased_date" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3px"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/text_color" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_purchased_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purchase_name" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3px"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/text_color" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_payment_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_method" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3px"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/text_color" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_total_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_amount" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/layout_background"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/test" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/black" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/units" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/sample_package_name" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/black" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/sample_price" />
                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_done"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/button_blue_background"
                android:padding="20dp"
                android:text="@string/done"
                android:textAllCaps="false"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>