<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="beginTestHandler"
            type="com.genesiswtech.lkwb.ui.beginTest.view.IBeginTestView" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <include
            android:id="@+id/llProgressBar"
            layout="@layout/layout_progress_bar_with_text"
            android:visibility="gone" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/beginTestPage"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            android:visibility="gone"
            tools:ignore="MissingConstraints">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_20">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:layout_marginBottom="@dimen/dimen_40"
                        android:text="@string/this_test_includes"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/header_text"
                        android:textFontWeight="500"
                        app:fontFamily="@font/poppins_font_family" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/questions"
                            android:textColor="@color/sub_text"
                            android:textFontWeight="600"
                            app:fontFamily="@font/poppins_font_family" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:orientation="vertical">


                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/readTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/reading_questions"
                                android:textColor="@color/des_text"
                                android:textFontWeight="400"
                                app:fontFamily="@font/poppins_font_family" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/listenTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/listening_questions"
                                android:textColor="@color/des_text"
                                android:textFontWeight="400"
                                app:fontFamily="@font/poppins_font_family" />

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_1"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:layout_marginBottom="@dimen/dimen_20"
                        android:background="@color/line_divider_grey" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/time"
                            android:textColor="@color/sub_text"
                            android:textFontWeight="600"
                            app:fontFamily="@font/poppins_font_family" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/timeTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/minutes"
                            android:textColor="@color/des_text"
                            android:textFontWeight="400"
                            app:fontFamily="@font/poppins_font_family" />


                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_1"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:layout_marginBottom="@dimen/dimen_20"
                        android:background="@color/line_divider_grey" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/marks"
                            android:textColor="@color/sub_text"
                            android:textFontWeight="600"
                            app:fontFamily="@font/poppins_font_family" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:orientation="vertical">


                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/fullMarkTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/full_marks"
                                android:textColor="@color/des_text"
                                android:textFontWeight="400"
                                app:fontFamily="@font/poppins_font_family" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/passMarkTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pass_marks"
                                android:textColor="@color/des_text"
                                android:textFontWeight="400"
                                android:visibility="gone"
                                app:fontFamily="@font/poppins_font_family" />

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_1"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:layout_marginBottom="@dimen/dimen_20"
                        android:background="@color/line_divider_grey" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_50"
                        android:visibility="invisible"
                        android:text="@string/you_can_leave"
                        android:textColor="@color/list_test_price"
                        android:textFontWeight="400"
                        app:fontFamily="@font/poppins_font_family" />


                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_begin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="@dimen/dimen_25"
                    android:background="@drawable/button_blue_background"
                    android:onClick="@{beginTestHandler::onBeginButtonClick}"
                    android:text="@string/begin"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textFontWeight="600"
                    app:fontFamily="@font/urbanist_font_family" />
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>